[project]
name = "clif-epi-of-vaso"
version = "0.1.0"
description = "Federated multi-site analysis of vasopressin initiation patterns in septic shock (CLIF 2.1.0)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clifpy>=0.3.9",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "pyarrow>=10.0.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "polars>=0.20.0",
    "statsmodels>=0.14.0",
    "lifelines>=0.27.0",
]

# MIMIC-IV extraction only (code/mimic_extract.py); CLIF sites don't need these.
# Install with: uv sync --extra mimic
[project.optional-dependencies]
mimic = [
    "duckdb>=0.9.0",
    "jinja2>=3.0.0",
]

[tool.uv]
package = false
